--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,14 +1,3 @@
 {
-    "Тестовый пример": "Test example",
-    "Бизнес": "Business",
-    "Особенности": "Features",
-    "Новости": "News",
-    "О нас": "About Us",
-    "Цены": "Prices",
-    "Выйти": "Logout",
-    "Настройки": "Settings",
-    "Войти": "Sign In",
-    "Все чаты": "All chats",
-    "Библиотека": "Library",
-    "Зарегистрироваться": "Sign Up"
+    "Тестовый пример": "Test example"
 }
