--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,14 +1,3 @@
 {
-    "Тестовый пример": "Тестовый пример",
-    "Бизнес": "Бизнес",
-    "Особенности": "Особенности",
-    "Новости": "Новости",
-    "О нас": "О нас",
-    "Цены": "Цены",
-    "Войти": "Войти",
-    "Выйти": "Выйти",
-    "Настройки": "Настройки",
-    "Все чаты": "Все чаты",
-    "Библиотека": "Библиотека",
-    "Зарегистрироваться": "Зарегистрироваться"
+    "Тестовый пример": "Тестовый пример"
 }
